Change Log
==========

Version 2.4.1 -
----------------------
- Fixed issue #87, a regression in indented block.
  Reported by Renz Bagaporo, who submitted a very nice repro
  example, which makes the bug-fixing process a lot easier,
  thanks!

- Modified setParseAction to accept None as an argument,
  indicating that all previously-defined parse actions for the
  expression should be cleared.

- Modified runTests to call postParse function before dumping out
  the parsed results - allows for postParse to add further results,
  such as indications of additional validation success/failure.

- Updated statemachine example: refactored state transitions to use
  overridden classmethods; added <statename>Mixin class to simplify
  definition of application classes that "own" the state object and
  delegate to it to model state-specific properties and behavior.

- Added example nested_markup.py, showing a simple wiki markup with
  nested markup directives.

- Rewrote delta_time.py example (renamed from deltaTime.py) to
  fix some omitted formats and upgrade to latest pyparsing idioms,
  beginning with writing an actual BNF.


Version 2.4.0 - April, 2019
---------------------------
- Well, it looks like the API change that was introduced in 2.3.1 was more
  drastic than expected, so for a friendlier forward upgrade path, this
  release:
  . Bumps the current version number to 2.4.0, to reflect this
    incompatible change.
  . Adds a pyparsing.__compat__ object for specifying compatibility with
    future breaking changes.
  . Conditionalizes the API-breaking behavior, based on the value
    pyparsing.__compat__.collect_all_And_tokens.  By default, this value
    will be set to True, reflecting the new bugfixed behavior. To set this
    value to False, add to your code:

        import pyparsing
        pyparsing.__compat__.collect_all_And_tokens = False

  . User code that is dependent on the pre-bugfix behavior can restore
    it by setting this value to False.
